# Sci__wiz-RNA-seq-workflow

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-chnages.md  feature_request.md
.github/workflows/: helperfunc_groovy.yml  helperfunc_python.yml  pipeline_ci.yml  sci_wiz_ci_workflow.yaml  sci_wiz_release.yaml
Documentation/: dependencies.bib
nextflow/: cleancount.py  getstrand.py  main.nf  nextflow.config
nextflow/environment/data-alignment-env/: dockerfile  rnaseqconda.yml
nextflow/environment/data-preprocessing-env/: dockerfile  rnaseqconda.yml
nextflow/lib/: ConcatFile.groovy  Transformer.groovy
nextflow/modules/bam_to_cram/: main.nf
nextflow/modules/count/: main.nf
nextflow/modules/fastp/: main.nf
nextflow/modules/fastqc/: main.nf
nextflow/modules/mapping/: main.nf
nextflow/modules/multiqc/: main.nf
nextflow/multiqc/: multiqc_config.yaml
nextflow/subworkflows/: concatBatchRun.nf  qualityCheck.nf  rnaseqPreprocess.nf
sci_wiz/: __init__.py  configure.py  data_preprocessor.py  interface_command.py  invoker.py  profiles.py  rna_seq.py
tests/: test_invoker.py  test_profiles.py  test_rna_seq.py
